19 December 2004 Sylvain Pion
- Squash warning.

19 December 2004 Andreas Fabri
- Updated file headers in the demos

25 September 2004 Sylvain Pion
- _GLIBCXX_DEBUG fixes : avoid copying default construted iterators,
  by splitting Vertex_data's constructor in an init function which has
  access to Tree's end() iterator, instead of the default constructed one.

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

13 August 2004 Andreas Fabri
- Replaced the \Ipe with an \includegraphics

24 June 2004 Sylvain Pion
- Remove warning with g++ -O2 (and micro-optimisation).

22 June 2004 Sylvain Pion
- Add some "using base::member;" to please g++ 3.4.

17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

10 February 2004 Radu Ursu
-Updated headers in examples

4.35 (19 Jan 2004) [af]
- Added bbox_2 functor to the doc, and replaced .bbox() function call by functor

4.34 (18 Jan 2004)
- Rename CGAL_TYPENAME_MSVC_NULL to typename.

4.33 (18 Jan 2004)
- Remove obsolete workaround for CGAL_CFG_NO_ITERATOR_TRAITS.

4.32 (1 Dec 2003)
- Better documentation of the required Compute_area_2.

4.31 (1 Dec 2003)
- Use compute_area_2(3 points) instead of construcing a temporary triangle.

4.30 (17 Nov 2003) [lk]
- Removed CGAL_CFG_NO_SCOPE_MEMBER_FUNCTION_PARAMETERS workaround.

=========================== CGAL 3.0 =====================

4.29 (22 October 2003) [af]
- new headers

4.28 (30 September 2003) [af]
- moved \chapter from polygon.tex to main.tex

4.27 (23 September 2003) [mh]
- Added one more missing typename

4.26 (22 September)
- resubmission, just to be sure

4.25 (20 September)
- Added typenames

4.24
- New headers

4.23 (17 Sep 2003) [af]
- Removed Polygon_traits

4.22 ( 16 Sep 2003) [af]
- Added missing typenames